# app-pulse

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  spotlightwindow.cpp  spotlightwindow.h
